# tesla-checker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: docker.yml
deploy/: .env.example  compose.yml
scripts/: deploy.sh
src/: config.py
src/application/: check_inventory.py
src/domain/: inventory_snapshot.py  ports.py  search_criteria.py  vehicle.py
src/infrastructure/: json_snapshot_repository.py  lbc_parsing.py  lbc_schemas.py  leboncoin_gateway.py  leboncoin_scraper.py  ntfy_notifier.py  snapshot_schema.py  tesla_api_schemas.py  tesla_playwright_gateway.py
tests/: conftest.py
tests/integration/: test_json_snapshot_repository.py
tests/unit/: test_card_parsing.py  test_check_inventory.py  test_inventory_snapshot.py  test_lbc_parsing.py  test_tesla_api_schemas.py  test_vehicle.py
