[project]
name = "tesla-checker"
version = "1.0.0"
description = "Tesla Model 3 used car inventory checker with push notifications"
requires-python = ">=3.12"
dependencies = [
    "playwright",
    "camoufox",
    "pydantic>=2",
    "curl-cffi>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["camoufox.*", "playwright.*", "curl_cffi.*"]
ignore_missing_imports = true

# Camoufox / curl-cffi have no usable type stubs in our usage
[[tool.mypy.overrides]]
module = [
    "src.infrastructure.tesla_playwright_gateway",
    "src.infrastructure.leboncoin_gateway",
    "src.infrastructure.leboncoin_scraper",
]
disallow_untyped_calls = false
disable_error_code = ["type-arg", "attr-defined", "no-any-return"]
